Rename "Schema definition" to "Database Schema"
 1. There are multiple XML schemas -- eg for database definition, for routing, for CiviCase workflows, for Symfony services. Specify which one.
 2. The other titles in the menu use "Title Case".

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,7 +65,7 @@ pages:
   # Cache: /framework/cache.md
   # Components: /framework/components.md
   # Database: /framework/database.md
-  - Schema definition: framework/schema-definition.md
+  - Database Schema: framework/database/xml.md
   # Resources: /framework/resources.md
   - Upgrade Reference: framework/upgrade.md
   # Other Reference:
